--- a/index.html
+++ b/index.html
@@ -31,6 +31,20 @@
       </div>
     </div>
 
+    <div class="panda">
+      <div class="ears"></div>
+
+      <div class="left-eye">
+        <div class="pupils"></div>
+      </div>
+      <div class="left-eye right-eye">
+        <div class="pupils"></div>
+      </div>
+
+      <div class="nose"></div>
+    </div>
+
+
   </div>
 </body>
 </html>
