--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
       <div class="nose"></div>
     </div>
 
+    <div class="crown">
+      <div class="spikes"></div>
+      <div class="base"></div>
+      <div class="crown-circles"></div>
+    </div>
+
+
+
+
 
   </div>
 </body>
